# mai-lab-memory

./: .gitignore  CMakeLists.txt  README.md  client_log  generate_file.py  main.c
client/: client.c  client.h
solution/: solution.c  solution.h
utils/: utils.c  utils.h
vector/: vector.c  vector.h
